locale support, rendering calendar dynamically

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,7 @@
         </div>
     </div>
 
-    {% include "slds-calendar/calendar.html" %}
+    <div class="slds-p-horizontal--medium">
+        {% include "slds-calendar/calendar.html" %}
+    </div>
 {% endblock %}
