--- a/src/_layout.html
+++ b/src/_layout.html
@@ -4,10 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>Prototype</title>
-        <meta name="description" content="">
+        <title>SLDS JS</title>
+        <meta name="description" content="JavaScript functionality for Salesforce Lightning Design System">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="/assets/styles/main.css">
     </head>
