--- a/src/slds-calendar/calendar.html
+++ b/src/slds-calendar/calendar.html
@@ -4,6 +4,6 @@
         <svg aria-hidden="true" class="slds-input__icon slds-icon-text-default">
             <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#event"></use>
         </svg>
-        <input id="input-datepicker" class="slds-input sldsjs-datepicker" type="text" placeholder="yyyy/mm/dd" />
+        <input id="input-datepicker" class="slds-input sldsjs-datepicker" type="text" placeholder="yyyy-mm-dd" value="" />
     </div>
 </div>
