code highlighing, implementation details, and hide datepicker on body click

--- a/src/_layout.html
+++ b/src/_layout.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         {% block content %} {% endblock %}
+        <script src="/assets/demo/js/demo.js"></script>
         <script src="/assets/vendor/js/vendor.js"></script>
         <script src="/assets/js/main.js"></script>
     </body>
